static/assets/sass/main.css
/* ... */
.ac-custom-select .ss-single-selected .ss-values,
.ac-custom-select .ss-multi-selected .ss-values {
  margin-top: 3px;
}
.ac-custom-select .ss-single-selected .ss-values .ss-disabled,
.ac-custom-select .ss-multi-selected .ss-values .ss-disabled {
  margin: 0;
  padding: 0;
  font-family: "Roboto", sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 16px;
  color: #a6abbd;
}
.ac-custom-select .ss-single-selected .ss-values .ss-value,
.ac-custom-select .ss-multi-selected .ss-values .ss-value {
  height: 30px;
  margin-bottom: 6px;
  padding: 0 10px;
  background-color: #35a651;
}
.ac-custom-select .ss-single-selected .ss-add,
.ac-custom-select .ss-multi-selected .ss-add {
  margin: 4px;
  align-items: center;
}
.ac-custom-select .ss-content {
  border: 1px solid #a6abbd;
}
.ac-custom-select .ss-content .ss-list .ss-option {
  font-size: 14px;
  color: #515D63;
  transition: 0.3s ease-in-out;
}
.ac-custom-select .ss-content .ss-list .ss-option:hover {
  opacity: 0.8;
  color: var(--ac-primary);
}
.ac-custom-select .ss-content .ss-list .ss-option.ss-disabled {
  opacity: 0.5;
}
.ac-custom-select .ss-content .ss-search input {
  border: 1px solid #a6abbd;
}
.ac-custom-select .ss-content .ss-search input:focus {
  outline: none;
  box-shadow: none;
}

.message {
  display: flex;
  align-items: center;
}
.message lord-icon {
  margin-right: 1rem;
}
.message.is-warning {
  background-color: transparent;
}
.message.is-danger {
  background-color: transparent;
}

.is-gap-4 {
  gap: 4px;
}

/****************************************
Responsive Classes
*****************************************/
@media screen and (max-width: 768px) {
  .container {
    padding: 0 15px;
  }
  .section-title {
    font-size: 28px;
    margin-bottom: 1rem;
  }
  .section-title h2 {
    font-size: 28px;
    margin-bottom: 0;
  }
  .section-title h1 {
    font-size: 28px;
  }
  .section-title p {
    margin-bottom: 0;
  }
}
@media screen and (min-width: 769px) and (max-width: 1023px) {
  .container {
    padding: 0 30px;
  }
  .section-title p {
    margin-bottom: 0;
  }
}
@media (min-width: 1216px) and (max-width: 1440px) {
  .container {
    max-width: 1200px !important;
  }
}

.hero-area-2 {
  position: relative;
  z-index: 1;
}
.hero-area-2::after {
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-repeat: no-repeat !important;
  position: absolute;
  z-index: -2;
  content: "";
  background: url(../images/appscode/about-hero-bg-2.png);
  background-size: contain;
}
.hero-area-2 .hero-area-inner-2 {
  height: 400px;
  padding-top: 120px;
}
.hero-area-2 .hero-area-inner-2 h1 {
  font-size: 48px;
  margin-bottom: 15px;
}
.hero-area-2 .hero-area-inner-2 p {
  font-size: 18px;
}

.hero-area-2.bg-color-available:after {
  background-color: #fbfbfb;
}

.illustration-area {
  min-height: 500px;
  background-repeat: no-repeat;
}

.illustration-1 {
  background-image: url(../images/consulting-page/illustation.png);
  background-size: contain;
}

.consulting-inner h2 {
  font-size: 36px;
  margin-bottom: 30px;
  font-weight: 400;
  line-height: 50px;
}
.consulting-inner p {
  font-size: 16px;
  line-height: 28px;
  color: #515D63;
  margin-bottom: 20px;
}
.consulting-inner p:last-child {
  margin-bottom: 0;
}

.testimonial-area-2 .testimonial-wrapper {
  overflow: hidden;
}
.testimonial-area-2 .testimonial-wrapper .quote-icon {
  margin-bottom: 30px;
}
.testimonial-area-2 .testimonial-wrapper h1 {
  font-size: 28px;
  line-height: 45px;
  font-weight: 600;
}
.testimonial-area-2 .testimonial-wrapper .user-information {
  margin-top: 30px;
  float: right;
  overflow: hidden;
  align-items: center;
}
.testimonial-area-2 .testimonial-wrapper .user-information figure {
  margin-right: 15px;
}
.testimonial-area-2 .testimonial-wrapper .user-information h4 {
  font-size: 18px;
  line-height: 28px;
  font-weight: 700;
  color: var(--ac-primary);
}
.testimonial-area-2 .testimonial-wrapper .user-information p {
  font-size: 14px;
  color: #515D63;
}

.package-area .single-package-wrapper {
  padding: 30px 50px;
}
.package-area .single-package-wrapper h4 {
  font-size: 18px;
  margin-bottom: 5px;
}
.package-area .single-package-wrapper p {
  font-size: 16px;
}

.our-customer-area {
  background-color: #FBFBFB;
}

.training-wrapper-image .single-training-image-wrapper {
  width: 280px;
  height: 280px;
  border-radius: 50%;
  overflow: hidden;
  display: inline-block;
  margin-right: 30px;
}
.training-wrapper-image .single-training-image-wrapper:last-child {
  margin-right: 0;
}
.training-wrapper-image .single-training-image-wrapper:nth-child(even) {
  width: 250px;
  height: 250px;
  transform: translateY(-70px);
}
.training-wrapper-image .single-training-image-wrapper img {
  transition: 0.3s ease-in-out;
}
.training-wrapper-image .single-training-image-wrapper:hover img {
  transform: scale(1.3);
}

.about-training {
  position: relative;
  z-index: 1;
}

.cta-area-2 .cta-content h1 {
  font-size: 73px;
  line-height: 83px;
  margin-bottom: 50px;
}

.client-thumb {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  overflow: hidden;
  float: left;
  margin-right: 20px;
}

.client-info {
  float: left;
  overflow: hidden;
  margin-top: 5px;
  text-align: left;
}
.client-info h4 {
  font-size: 16px;
  line-height: 19px;
  margin-bottom: 3px;
}
.client-info p {
  margin: 0;
  font-size: 12px;
  font-style: italic;
  color: #515D63;
  opacity: 0.6;
}

/*====================================
    Support page CSS
====================================*/
/* Payment Method section style */

.item ul {
  display: none;
  overflow: hidden;
  transition: 0.3s;
}

.item ul li.is-active a {
  color: var(--ac-primary);
}

.item input:checked ~ ul,
.item input:checked ~ .item > ul {
  display: block;
  transition: 0.3s linear;
}

.item input:checked ~ label span,
.item input:checked ~ .item > label span {
  transform: rotate(90deg);
  margin-top: 0;
  transform-origin: 0;
}
/* ... */

